# sam2-detector

./: .gitignore  Makefile  README.md  build.sh  debug_projection.py  main.py  main.spec  meta.json  pyproject.toml  requirements.txt  run.sh  setup.sh  test_camera.py  test_vision_service.py  viam_sam2-detector_sam2-segments.md  viam_sam2-detector_sam2.md
.github/workflows/: publish.yaml
debug/: README.md  check_alignment.py  check_frames.py  check_sam2_config.py  debug_projection.py  save_pcds.py
docs/: linux-gpu-setup.md
sam2-detector/: .viam-gen-info  Makefile  README.md  build.sh  meta.json  requirements.txt  viam_sam2-detector_sam2.md
sam2-detector/src/models/: sam2.py
src/: main.py  spatialmath.py
src/hooks/: rocm_env.py
src/models/: sam2.py  sam2_segments.py
