[project]
name = "viam-sam2-detector"
version = "0.1.0"
description = "Viam vision module using Meta SAM2 for single-object segmentation and tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "viam-sdk",
    "typing-extensions",
    "numpy",
    "pillow",
    "torch",
    "torchvision",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
    "huggingface-hub>=1.8.0",
]
