[project]
name = "viam-sam2-detector"
version = "0.1.0"
description = "Viam vision module using Meta SAM2 for single-object segmentation and tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "viam-sdk",
    "typing-extensions",
    "numpy",
    "pillow",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
    "huggingface-hub>=1.8.0",
    "pyinstaller>=6.19.0",
]
# NOTE: torch and torchvision are installed by setup.sh with the correct
# platform-specific index (standard PyPI for macOS, ROCm for AMD GPUs).
# They are intentionally excluded here so uv sync doesn't overwrite them.
